# study-hard-timer-in-telegram

./: main.py  ptbot.py  pyproject.toml
